third_party/move/move-compiler-v2/tests/reference-safety/freeze.exp

Diagnostics:
error: cannot transfer mutable local `r` since it is borrowed
   ┌─ tests/reference-safety/freeze.move:18:9
   │
18 │         ref_mut_mut(r, r); // error
   │         ^^^^^^^^^^^^^^^^^
   │         │
   │         transfer attempted here
   │         previously mutably borrowed here

error: cannot transfer mutable local `r` since it is borrowed
   ┌─ tests/reference-safety/freeze.move:24:9
   │
24 │         ref_imm_mut(r, r); // error
   │         ^^^^^^^^^^^^^^^^^
   │         │           │
   │         │           previously borrowed here
   │         transfer attempted here
